--- a/_posts/2025-02-27-DBS101_Unit1.md
+++ b/_posts/2025-02-27-DBS101_Unit1.md
@@ -163,9 +163,8 @@ Used to plan a database before creating it.
 ###  Database System Architecture 
     A database system architecture consists of various components that ensure efficient data management.
 
-![alt text](image.png)
-
+![alt text](../assets/DSA.png)
 
 
 ### Architecture of Applications that use Databases as Backend
-![alt text](image-1.png)
+![alt text](../assets/AA.png)
